--- a/algorithms_Java01/.project
+++ b/algorithms_Java01/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>algorithms_Java01</name>
+	<name>algorithms01_Stack&amp;&amp;Que</name>
 	<comment></comment>
 	<projects>
 	</projects>
