--- a/algorithms_Java02/.project
+++ b/algorithms_Java02/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>algorithms_Java02</name>
+	<name>algorithms02_DFS&amp;&amp;BFS</name>
 	<comment></comment>
 	<projects>
 	</projects>
