--- a/algorithms_Java04/.project
+++ b/algorithms_Java04/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>algorithms_Java04</name>
+	<name>algorithms04_DP</name>
 	<comment></comment>
 	<projects>
 	</projects>
