--- a/algorithms_Java03/.project
+++ b/algorithms_Java03/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>algorithms_Java03</name>
+	<name>algorithms03_Greedy</name>
 	<comment></comment>
 	<projects>
 	</projects>
