--- a/algorithms02_BinarySearch/bin/.gitignore
+++ b/algorithms02_BinarySearch/bin/.gitignore
@@ -1,5 +1,8 @@
+/algorithms_Java01_01/
+/algorithms_Java01_02/
 /algorithms_Java01_03/
 /algorithms_Java01_04/
 /algorithms_Java01_05/
 /algorithms_Java01_06/
 /algorithms_Java01_07/
+/module-info.class
