--- a/algorithms04_Greedy/.project
+++ b/algorithms04_Greedy/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>algorithms04___Greedy</name>
+	<name>algorithms04_Greedy</name>
 	<comment></comment>
 	<projects>
 	</projects>
